--- a/incubator/jasperserver/values.yaml
+++ b/incubator/jasperserver/values.yaml
@@ -3,6 +3,10 @@
 ##
 image: bitnami/jasperserver
 
+## Bitnami image Tag 
+#
+imageTag: 6.3.0-r3
+
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -12,19 +16,19 @@ image: bitnami/jasperserver
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-jasperserver#environment-variables
 ##
-jasperserverUser: user
+jasperserverUsername: user
 
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-jasperserver#environment-variables
-jasperserverPassword: password
+# jasperserverPassword: 
 
 ## SMTP mail delivery configuration
 ## ref: https://github.com/bitnami/bitnami-docker-jasperserver#smtp-configuration
 ##
 # smtpHost:
 # smtpPort:
-# smtpHostID:
+# smtpEmail:
 # smtpUser:
 # smtpPassword:
 # smtpProtocol:
