--- a/incubator/moodle/templates/apache-pvc.yaml
+++ b/incubator/moodle/templates/apache-pvc.yaml
@@ -2,6 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  labels:
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
   name: {{ template "fullname" . }}-apache
   annotations:
     volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.apache.storageClass | quote }}
