--- a/incubator/moodle/values.yaml
+++ b/incubator/moodle/values.yaml
@@ -12,12 +12,12 @@ image: bitnami/moodle
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-moodle#environment-variables
 ##
-moodleUser: user
+moodleUsername: user
 
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-moodle#environment-variables
-moodlePassword: password
+#moodlePassword: 
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-moodle#environment-variables
@@ -30,7 +30,6 @@ moodleEmail: user@example.com
 ##
 # smtpHost:
 # smtpPort:
-# smtpHostID:
 # smtpUser:
 # smtpPassword:
 # smtpProtocol:
