--- a/incubator/sugarcrm/templates/pvc.yaml
+++ b/incubator/sugarcrm/templates/pvc.yaml
@@ -2,18 +2,18 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "fullname" . }}-apache
+  name: {{ template "fullname" . }}
   labels:
     app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.apache.storageClass | quote }}
+    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.sugarcrm.storageClass | quote }}
 spec:
   accessModes:
-    - {{ .Values.persistence.apache.accessMode | quote }}
+    - {{ .Values.persistence.sugarcrm.accessMode | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.apache.size | quote }}
+      storage: {{ .Values.persistence.sugarcrm.size | quote }}
 {{- end -}}
