--- a/incubator/sugarcrm/values.yaml
+++ b/incubator/sugarcrm/values.yaml
@@ -19,6 +19,11 @@ imageTag: 6.5.24-r2
 ##
 sugarcrmUsername: user
 
+## User of the application
+## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
+##
+sugarcrmLastname: Name
+
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
