--- a/incubator/cassandra/templates/petset.yaml
+++ b/incubator/cassandra/templates/petset.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: {{ template "fullname" . }}
-        image: {{ .Values.image }}:{{.Values.imageTag }}
+        image: "{{ .Values.image }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: CASSANDRA_TRANSPORT_PORT
