add tag for image

--- a/incubator/cassandra/values.yaml
+++ b/incubator/cassandra/values.yaml
@@ -51,7 +51,7 @@ cassandraEndpointSnitch: "SimpleSnitch"
 
 ##  docker image version. Fetch tag from https://hub.docker.com/r/bitnami/cassandra/tags/
 ##  Avoid to use 'latest' !
-image: "bitnami/cassandra"
+image: "bitnami/cassandra:3.9-r3"
 
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
