--- a/incubator/node/values.yaml
+++ b/incubator/node/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami node image version
 ## ref: https://hub.docker.com/r/bitnami/node/tags/
 ##
-image: bitnami/node
+image: bitnami/node:7.0.0-r1
 
 
 ## Git repository http/https
