--- a/incubator/moodle/templates/secrets.yaml
+++ b/incubator/moodle/templates/secrets.yaml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.moodlePassword }}
-  moodle-password: {{ .Values.moodlePassword | b64enc | quote }}
+  moodle-password: {{ default "" .Values.moodlePassword | b64enc | quote }}
   {{- else }}
   moodle-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- end }}
