--- a/incubator/moodle/values.yaml
+++ b/incubator/moodle/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami moodle image version
 ## ref: https://hub.docker.com/r/bitnami/moodle/tags/
 ##
-image: bitnami/moodle
+image: bitnami/moodle:3.1.3-r1
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -61,6 +61,10 @@ serviceType: LoadBalancer
 ##
 persistence:
   enabled: true
+  apache:
+    storageClass: generic
+    accessMode: ReadWriteOnce
+    size: 1Gi
   moodle:
     storageClass: generic
     accessMode: ReadWriteOnce
