--- a/incubator/sugarcrm/values.yaml
+++ b/incubator/sugarcrm/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami sugarcrm image 
 ## ref: https://hub.docker.com/r/bitnami/sugarcrm/tags/
 ##
-image: bitnami/sugarcrm
+image: bitnami/sugarcrm:6.5.24-r2
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -14,15 +14,16 @@ image: bitnami/sugarcrm
 ##
 sugarcrmUsername: user
 
-## User of the application
-## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
-##
-sugarcrmLastname: Name
-
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
 ## sugarcrmPassword: 
+
+## Lastname
+## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
+##
+sugarcrmLastname: Name
+
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
@@ -33,8 +34,6 @@ sugarcrmEmail: user@example.com
 ## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#environment-variables
 ##
 ##  sugarcrmHost: 
-
-
 
 ## SMTP mail delivery configuration
 ## ref: https://github.com/bitnami/bitnami-docker-sugarcrm#smtp-configuration
@@ -84,6 +83,10 @@ serviceType: LoadBalancer
 ##
 persistence:
   enabled: true
+  apache:
+    storageClass: generic
+    accessMode: ReadWriteOnce
+    size: 1Gi
   sugarcrm:
     storageClass: generic
     accessMode: ReadWriteOnce
