--- a/incubator/suitecrm/templates/deployment.yaml
+++ b/incubator/suitecrm/templates/deployment.yaml
@@ -75,11 +75,20 @@ spec:
         volumeMounts:
         - name: suitecrm-data
           mountPath: /bitnami/suitecrm
+        - name: apache-data
+          mountPath: /bitnami/apache
       volumes:
       - name: suitecrm-data
       {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
-          claimName: {{ template "fullname" . }}
+          claimName: {{ template "fullname" . }}-suitecrm
+      {{- else }}
+        emptyDir: {}
+      {{- end }}
+      - name: apache-data
+      {{- if .Values.persistence.enabled }}
+        persistentVolumeClaim:
+          claimName: {{ template "fullname" . }}-apache
       {{- else }}
         emptyDir: {}
       {{- end }}
