--- a/incubator/suitecrm/templates/svc.yaml
+++ b/incubator/suitecrm/templates/svc.yaml
@@ -9,6 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   type: {{ .Values.serviceType }}
+  {{- if eq .Values.serviceType "LoadBalancer" }}
+  loadBalancerIP: {{ default "" .Values.suitecrmLoadBalancerIP }}
+  {{- end }}
   ports:
   - name: http
     port: 80
