--- a/incubator/node/Chart.yaml
+++ b/incubator/node/Chart.yaml
@@ -1,6 +1,6 @@
 name: node
 version: 0.1.0
-description: NodeJs  Event-driven I/O server-side JavaScript environment based on V8
+description: Event-driven I/O server-side JavaScript environment based on V8
 keywords:
 - node
 - javascript 
@@ -13,4 +13,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
-icon: 
+icon: https://d33np9n32j53g7.cloudfront.net/assets/stacks/nodejs/img/nodejs-stack-110x117-331955cd5e874f1ebd26ff9bb0c5af4c.png
