--- a/incubator/node/templates/deployment.yaml
+++ b/incubator/node/templates/deployment.yaml
@@ -18,14 +18,14 @@ spec:
             {
                 "name": "git-clone-app",
                 "image": "{{ .Values.image }}", 
-                "command": [ "/bin/sh", "-c" , "git clone {{ .Values.repository }} /app" ],
+                "command": [ "/bin/sh", "-c" , "git clone {{ .Values.repository }} /app"  ], 
                 "volumeMounts": [
                     {
                         "name": "node-data",
                         "mountPath": "/app"
                     }
                 ]
-            }
+           }
         ]'
     spec:
       containers:
@@ -38,10 +38,10 @@ spec:
         command:
         - "/bin/bash"
         - "-ec"
-        - |
+        -  |
           git checkout {{ .Values.revision }}
-          chown -R bitnami:daemon /app 
-          su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm install' 
+          chown -R bitnami:daemon /app
+          su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm install'
           su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm start' 
         ports:
         - name: http
@@ -65,4 +65,9 @@ spec:
           mountPath: /app
       volumes:
       - name: node-data
+        {{- if .Values.persistence.enabled }}
+        persistentVolumeClaim:
+          claimName: {{ template "fullname" . }}
+        {{- else }}
         emptyDir: {}
+        {{- end -}}
