--- a/incubator/dokuwiki/Chart.yaml
+++ b/incubator/dokuwiki/Chart.yaml
@@ -1,6 +1,6 @@
 name: dokuwiki
 version: 0.1.0
-description: DokuWiki is a simple to use and highly versatile Open Source wiki software that doesn't require a database. It is loved by users for its clean and readable syntax.
+description: DokuWiki is a standards-compliant, simple to use wiki optimized for creating documentation. It is targeted at developer teams, workgroups, and small companies. All data is stored in plain text files, so no database is required.
 keywords:
 - dokuwiki
 - wiki
