changed serviceType to LoadBalancer

--- a/incubator/node/values.yaml
+++ b/incubator/node/values.yaml
@@ -38,7 +38,7 @@ mariadb:
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
 ##
-serviceType: NodePort
+serviceType: LoadBalancer
 
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
