do not assign a random value for `masterKey` parameter

--- a/incubator/parse/templates/secrets.yaml
+++ b/incubator/parse/templates/secrets.yaml
@@ -9,11 +9,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{ if .Values.parseServer.masterKey }}
-  master-key: {{ .Values.masterKey | b64enc | quote }}
-  {{ else }}
-  master-key: {{ randAlphaNum 10 | b64enc | quote }}
-  {{ end }}
+  master-key: {{ default "" .Values.parseServer.masterKey | b64enc | quote }}
 
   {{ if .Values.parseDashboard.enabled }}
   {{ if .Values.parseDashboard.password }}
