added labels to PVC and fix configmap without default values

--- a/incubator/mysql/templates/configmap.yaml
+++ b/incubator/mysql/templates/configmap.yaml
@@ -10,5 +10,5 @@ metadata:
 data:
   my.cnf: |-
 {{- if .Values.config }}
-{{ .Values.config | indent 4 }}
+{{ default ""  .Values.config | indent 4 }}
 {{- end -}}
