--- a/incubator/dokuwiki/templates/secrets.yaml
+++ b/incubator/dokuwiki/templates/secrets.yaml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.dokuwikiPassword }}
-  dokuwiki-password: {{ default "" .Values.dokuwikiPassword | b64enc | quote }}
+  dokuwiki-password: {{ .Values.dokuwikiPassword | b64enc | quote }}
   {{- else }}
   dokuwiki-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- end }}
