--- a/incubator/dokuwiki/templates/deployment.yaml
+++ b/incubator/dokuwiki/templates/deployment.yaml
@@ -20,8 +20,8 @@ spec:
         env:
         - name: DOKUWIKI_USERNAME
           value: {{ default "" .Values.dokuwikiUsername | quote }}
-        - name: DOKUWIKI_FULLNAME
-          value: {{ default "" .Values.dokuwikiFullname | quote }}
+        - name: DOKUWIKI_FULL_NAME
+          value: {{ default "" .Values.dokuwikiFullName | quote }}
         - name: DOKUWIKI_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -29,8 +29,8 @@ spec:
               key: dokuwiki-password
         - name: DOKUWIKI_EMAIL
           value: {{ default "" .Values.dokuwikiEmail | quote }}
-        - name: DOKUWIKI_WIKINAME
-          value: {{ default "" .Values.dokuwikiWikiname | quote }}
+        - name: DOKUWIKI_WIKI_NAME
+          value: {{ default "" .Values.dokuwikiWikiName | quote }}
         ports:
         - name: http
           containerPort: 80
@@ -46,7 +46,7 @@ spec:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 30
+          initialDelaySeconds: 60
           timeoutSeconds: 1
         resources:
 {{ toYaml .Values.resources | indent 10 }}
@@ -67,6 +67,6 @@ spec:
       {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
           claimName: {{ template "fullname" . }}-apache
-       {{- else }}
+      {{- else }}
          emptyDir: {}
-       {{- end }}
+      {{- end }}
