--- a/incubator/node/values.yaml
+++ b/incubator/node/values.yaml
@@ -24,7 +24,7 @@ revision: master
 mariadb:
   ## MariaDB admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
-  ## mariadbRootPassword: secretpassword
+  ## mariadbRootPassword: 
 
   ## Enable persistence using Persistent Volume Claims
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
