--- a/incubator/parse/templates/dashboard-deployment.yaml
+++ b/incubator/parse/templates/dashboard-deployment.yaml
@@ -44,20 +44,18 @@ spec:
         ports:
         - name: dashboard-http
           containerPort: 4040
-        # livenessProbe:
-          # httpGet:
-            # path: /
-            # port: http
-          # initialDelaySeconds: 120
-          # timeoutSeconds: 5
-        # readinessProbe:
-          # exec:
-            # command:
-            # - sh
-            # - -c
-            # - nami status ghost | grep "ghost is running"
-          # initialDelaySeconds: 5
-          # timeoutSeconds: 1
+        livenessProbe:
+          httpGet:
+            path: /
+            port: dashboard-http
+          initialDelaySeconds: 120
+          timeoutSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /
+            port: dashboard-http
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
