allow separate resource configuration for server and dashboard components

--- a/incubator/parse/templates/dashboard-deployment.yaml
+++ b/incubator/parse/templates/dashboard-deployment.yaml
@@ -57,7 +57,7 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 1
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+{{ toYaml .Values.parseDashboard.resources | indent 10 }}
         volumeMounts:
         - name: parse-dashboard-data
           mountPath: /bitnami/parse-dashboard
