--- a/incubator/jasperreports/templates/secrets.yaml
+++ b/incubator/jasperreports/templates/secrets.yaml
@@ -9,9 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{- if .Values.jasperserverPassword }}
-  jasperserver-password: {{ .Values.jasperserverPassword | b64enc | quote }}
+  {{- if .Values.jasperreportsPassword }}
+  jasperreports-password: {{ .Values.jasperreportsPassword | b64enc | quote }}
   {{- else }}
-  jasperserver-password: {{ randAlphaNum 10 | b64enc | quote }}
+  jasperreports-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- end }}
   smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
