--- a/incubator/jasperreports/Chart.yaml
+++ b/incubator/jasperreports/Chart.yaml
@@ -1,5 +1,5 @@
-name: jasperserver
-version: 0.1.0
+name: jasperreports
+version: 0.1.1
 description: The JasperReports server can be used as a stand-alone or embedded reporting and BI server that offers web-based reporting, analytic tools and visualization, and a dashboard feature for compiling multiple custom views
 keywords:
 - BI
@@ -10,7 +10,7 @@ keywords:
 - visualization
 home: http://community.jaspersoft.com/project/jasperreports-server
 sources:
-- https://github.com/bitnami/bitnami-docker-jasperserver
+- https://github.com/bitnami/bitnami-docker-jasperreports
 maintainers:
 - name: Bitnami
   email: containers@bitnami.com
