--- a/incubator/jasperreports/templates/pvc.yaml
+++ b/incubator/jasperreports/templates/pvc.yaml
@@ -9,11 +9,11 @@ labels:
 metadata:
   name: {{ template "fullname" . }}
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.jasperserver.storageClass | quote }}
+    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.jasperreports.storageClass | quote }}
 spec:
   accessModes:
-    - {{ .Values.persistence.jasperserver.accessMode | quote }}
+    - {{ .Values.persistence.jasperreports.accessMode | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.jasperserver.size | quote }}
+      storage: {{ .Values.persistence.jasperreports.size | quote }}
 {{- end -}}
