--- a/incubator/jasperreports/values.yaml
+++ b/incubator/jasperreports/values.yaml
@@ -1,7 +1,7 @@
-## Bitnami jasperserver image version
-## ref: https://hub.docker.com/r/bitnami/jasperserver/tags/
+## Bitnami JasperReports image version
+## ref: https://hub.docker.com/r/bitnami/jasperreports/tags/
 ##
-image: bitnami/jasperserver:6.3.0-r3
+image: bitnami/jasperreports:6.3.0-r5
 
 
 ## Specify a imagePullPolicy
@@ -11,17 +11,17 @@ image: bitnami/jasperserver:6.3.0-r3
 # imagePullPolicy:
 
 ## User of the application
-## ref: https://github.com/bitnami/bitnami-docker-jasperserver#environment-variables
+## ref: https://github.com/bitnami/bitnami-docker-jasperreports#environment-variables
 ##
-jasperserverUsername: user
+jasperreportsUsername: user
 
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
-## ref: https://github.com/bitnami/bitnami-docker-jasperserver#environment-variables
-# jasperserverPassword: 
+## ref: https://github.com/bitnami/bitnami-docker-jasperreports#environment-variables
+# jasperreportsPassword:
 
 ## SMTP mail delivery configuration
-## ref: https://github.com/bitnami/bitnami-docker-jasperserver#smtp-configuration
+## ref: https://github.com/bitnami/bitnami-docker-jasperreports#smtp-configuration
 ##
 # smtpHost:
 # smtpPort:
@@ -57,7 +57,7 @@ serviceType: LoadBalancer
 ##
 persistence:
   enabled: true
-  jasperserver:
+  jasperreports:
     storageClass: generic
     accessMode: ReadWriteOnce
     size: 8Gi
