--- a/incubator/jasperreports/templates/deployment.yaml
+++ b/incubator/jasperreports/templates/deployment.yaml
@@ -34,21 +34,23 @@ spec:
             secretKeyRef:
               name: {{ template "fullname" . }}
               key: jasperreports-password
-        - name: SMTP_EMAIL
-          value: {{ default "" .Values.smtpEmail| quote }}
+        - name: JASPERREPORTS_EMAIL
+          value: {{ default "" .Values.jasperreportsEmail | quote }}
         - name: SMTP_HOST
           value: {{ default "" .Values.smtpHost | quote }}
         - name: SMTP_PORT
           value: {{ default "" .Values.smtpPort | quote }}
+        - name: SMTP_EMAIL
+          value: {{ default "" .Values.smtpEmail| quote }}
         - name: SMTP_USER
           value: {{ default "" .Values.smtpUser | quote }}
-        - name: SMTP_PROTOCOL
-          value: {{ default "" .Values.smtpProtocol | quote }}
         - name: SMTP_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "fullname" . }}
               key: smtp-password
+        - name: SMTP_PROTOCOL
+          value: {{ default "" .Values.smtpProtocol | quote }}
         ports:
         - name: http
           containerPort: 8080
